# MEDICAL-RAG-CHATBOT

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: aws-deploy.yml
src/: __init__.py  chain_utils.py  config.py  db_utils.py  doc_utils.py  reranking_utils.py  retriever_utils.py
static/: script.js  style.css
templates/: index.html
